--- a/Locales/hi.json
+++ b/Locales/hi.json
@@ -1,3 +1,18 @@
 {
-  "home": "नमस्ते दुनिया"
+  "home": "नमस्ते दुनिया",
+  "sidebar": {
+    "history": "रोगी का इतिहास",
+    "book": "एक सत्र बुक करें",
+    "session": "मेरी बुकिंग",
+    "specs": "विशेषता"
+  },
+  "signup": {
+    "details": "कृपया अपना विवरण दर्ज करें",
+    "name": "नाम",
+    "email": "ईमेल",
+    "pass": "कुंजिका",
+    "cpass": "अपने पासवर्ड की पुष्टि करें",
+    "submit": "प्रस्तुत",
+    "pls": "कृपया, अपने खाते में लॉगिन करें"
+  }
 }
