--- a/Locales/pa.json
+++ b/Locales/pa.json
@@ -1,4 +1,18 @@
 {
   "home": "ਸਤਿ ਸ੍ਰੀ ਅਕਾਲ ਦੁਨਿਆ",
-  "name": "ਹਾਇ ਇਹ ਰਿਤਿਕ ਹੈ"
+  "name": "ਹਾਇ ਇਹ ਰਿਤਿਕ ਹੈ",
+  "sidebar": {
+    "history": "ਮਰੀਜ਼ ਦਾ ਇਤਿਹਾਸ",
+    "book": "ਇੱਕ ਸੈਸ਼ਨ ਬੁੱਕ ਕਰੋ",
+    "session": "ਮੇਰੀ ਬੁਕਿੰਗ",
+    "specs": "ਵਿਸ਼ੇਸ਼ਤਾਵਾਂ"
+  },
+  "signup": {
+    "details": "ਕਿਰਪਾ ਕਰਕੇ ਆਪਣੇ ਵੇਰਵੇ ਦਰਜ ਕਰੋ",
+    "name": "ਨਾਮ",
+    "email": "ਈ - ਮੇਲ",
+    "pass": "ਪਾਸਵਰਡ",
+    "cpass": "ਆਪਣੇ ਪਾਸਵਰਡ ਦੀ ਪੁਸ਼ਟੀ ਕਰੋ",
+    "submit": "ਜਮ੍ਹਾਂ ਕਰੋ"
+  }
 }
